--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>eco-interaction-galaxy</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Ecosphere</title>
+    <meta name="description" content="Ecosphere - Build and Manage your virtual ecosystem" />
+    <meta name="author" content="Kelvin Fameyeh" />
     <meta property="og:image" content="/og-image.png" />
   </head>
 
